Revision history for Perl extension Text-Markup.

0.34

0.33  2024-02-15T20:12:54Z
    - Added support for registering a regular expression for Text::Markup::None
      by passing it in the `use` statement. The None parser otherwise is only
      the fallback parser used by `parse()` when Text::Markup cannot determine
      which parser to use.

0.32  2024-02-08T03:25:18Z
    - Added the ability to change the regular expression for a format by
      passing it in the `use` statement.

0.31  2023-09-10T23:24:43Z
    - Fixed the passing of parameters to `parse()`.
    - Documented the parameters passable to `parse()` for each parser.

0.30  2023-09-10T16:42:18Z
    - Removed very old custom paths to `docutils` (reST) and `asciidoc`
      binaries on Windows. Users must ensure that the proper commands are
      in the PATH, instead.
    - Added Text::Markdown::Asciidoctor, which uses the `asciidoctor` command,
      as a updated alternative to Text::Markdown::Asciidoc, which uses the
      legacy `asciidoc` command. Text::Markdown will not use this formatter by
      default, but when explicitly loaded will be used instead of
      Text::Markup::Asciidoc.
    - Added Text::Markup::CommonMark, which uses the cmark library, via the
      CommonMark module. Text::Markdown will not use this formatter by
      default, but when explicitly loaded will be used instead of
      Text::Markup::Markdown.
    - De-duped the utilities for managing external commands from the Rest and
      Asciidoc modules into Text::Markdown::Cmd.

0.25  2023-09-04T22:20:13Z
    - Fixed the importation of Pod::Simple::XHTML, Text::Trac, Text::Textile,
      and Text::MediawikiFormat to use the correct syntax for requiring a
      minimum version. Thanks to Graham Knop for the PR (#27)!
    - Fixed a reStructuredText test failure on newer versions of `docutils`.
    - Moved development test dependencies from recommended prereqs to
      development prereqs.